--- a/style.css
+++ b/style.css
@@ -13,7 +13,65 @@ header {
 }
 
 main {
-    border: 5px solid rgb(177, 1, 1)
-    padding 5%;
-    margin 5%;
+    border: 5px solid rgb(177, 1, 1);
+    padding: 5%;
+    margin: 5%;
+}
+
+.nav {
+    background-color:rgb(59, 230, 84);
+    overflow: hidden;
+}
+
+.nav a {
+    float: left;
+    display: block;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    font-size: 18px;
+    padding: 15px 15px;
+}
+
+.nav a.hover {
+    background-color:rgb(50, 38, 38);
+    color: rgb(0, 0, 0);
+}
+
+.nav .active {
+    background-color: rgb(119,119,119);
+    color: rgb(255,255,255);
+}
+
+.nav .icon {
+    display: none;
+}
+
+@media (max-width: 700px) {
+    .nav a:not(:first-child) {
+        display: none;
+    }
+
+    .nav a.icon {
+        float: right;
+        display: block;
+    }
+    .nav.squishy {
+        position: relative;
+    }
+
+    .nav.squishy a.icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    .nav.squishy a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+
+    body, main {
+        margin: 0;
+        padding: 0;
+    }
 }
